refactor(search): 도서 검색 query 수정